tests/samples/positive/pointers/paddr_wide_literal.ax
module paddr_wide_literal;

fn main() -> i32 {
    let pointer: *const i32 = paddr(*const i32, 4294967296);
    if ptr_addr(pointer) == cast(usize, 0) {
        return 1;
    }
    return 0;
}
