tests/samples/negative/types/bit_cast_ptr_to_int.ax
module bit_cast_ptr_to_int;

fn main() -> i32 {
  let pointer: *const i32 = null;
  let address: usize = bit_cast(usize, pointer);
  return cast(i32, address);
}
